--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ pygments: true
 paginate: 8
 permalink: /:title
 
-title: BeiYuu.com
-url: http://beiyuu.com
+title: SimonShao
+url: http://simon582.github.io
 feed: /atom.xml
-author_info: <a href="http://beiyuu.com/">BeiYuu</a>
+author_info: <a href="http://simon582.github.io/">SimonShao</a>
