--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ paginate: 8
 permalink: /:title
 
 title: SimonShao
-url: http://simon582.github.io
+url: http://simonshao.com
 feed: /atom.xml
-author_info: <a href="http://simon582.github.io/">SimonShao</a>
+author_info: <a href="http://simonshao.com/">SimonShao</a>
